--- a/manifest.json
+++ b/manifest.json
@@ -2,41 +2,21 @@
   "name": "Attendance System",
   "short_name": "Attendance",
   "description": "University of Chittagong - Department of Philosophy Attendance System",
-  "start_url": ".",
+  "start_url": "/attendance-system/",
   "display": "standalone",
   "background_color": "#2c3e50",
-  "theme_color": "#3498db",
+  "theme_color": "#2c3e50",
   "orientation": "portrait",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
-  ],
-  "categories": ["education", "productivity"],
-  "shortcuts": [
-    {
-      "name": "Take Attendance",
-      "short_name": "Attendance",
-      "description": "Start taking attendance",
-      "url": "/?start=attendance"
-    },
-    {
-      "name": "View Reports",
-      "short_name": "Reports",
-      "description": "View attendance reports",
-      "url": "/?view=reports"
-    }
-  ],
-  "apple-mobile-web-app-capable": "yes",
-  "apple-mobile-web-app-status-bar-style": "black-translucent",
-  "apple-mobile-web-app-title": "Attendance System"
+  ]
 }
